integration_tests/tests/compile/fail_ulogmessages_struct.rs
use yule_log::ULogMessages;

#[derive(ULogMessages)]
pub struct NotAnEnum {
    value: u64,
}

fn main() {}
